--- a/button.html
+++ b/button.html
@@ -4,7 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
     <style>
    @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
@@ -15,7 +16,7 @@
 
 html, body {
   font-family: "Open Sans";
-  background: #FDFDFD;
+  background: none;
 }
 
 .containerTopsys {
