--- a/button.html
+++ b/button.html
@@ -122,20 +122,20 @@ span.clicked {
 <body>
     <div class="containerTopsys">
         <div class="buttonTopsys">
-          <p>dropdownTopsys</p>
+          <p>Explorează</p>
           <img src="https://svgshare.com/i/8u6.svg" alt="" class="arrow">
         </div>
         <div class="dropdownTopsys">
-          <a href="#" id="adobeXd">Adobe XD
+          <a href="#" id="adobeXd">Beneficiile digitalizării
             <span></span>
           </a>
-          <a href="#" id="sketch">Sketch
+          <a href="#" id="sketch">Soluții IT personalizate
             <span></span>
           </a>
-          <a href="#" id="figma">Figma
+          <a href="#" id="figma">De ce noi?
             <span></span>
           </a>
-          <a href="#" id="inVision">InVision
+          <a href="#" id="inVision">Cu Topsys este mai ușor
             <span></span>
           </a>
         </div>
