--- a/button.html
+++ b/button.html
@@ -26,6 +26,7 @@ html, body {
   position: -webkit-sticky;
   position: sticky;
   top: 0px;
+  z-index: 99999999999;
 }
 
 .buttonTopsys {
@@ -34,7 +35,7 @@ html, body {
   background: white;
   padding: 17px 30px;
   box-shadow: 3px 3px 30px rgba(118, 96, 168, 0.2);
-  border-radius: 25px;
+  border-radius: 15px;
   display: inline-block;
   cursor: pointer;
   transition: transform 0.2s ease, box-shadow 0.2s ease, color 0.2s ease;
