--- a/button.html
+++ b/button.html
@@ -130,16 +130,16 @@ span.clicked {
           <img src="https://svgshare.com/i/8u6.svg" alt="" class="arrow">
         </div>
         <div class="dropdownTopsys">
-          <a href="https://topsys.ro/#BeneficiileDigitalizarii" id="adobeXd" target="_blank">Beneficiile digitalizării
+          <a href="#BeneficiileDigitalizarii" id="adobeXd">Beneficiile digitalizării
             <span></span>
           </a>
-          <a href="https://topsys.ro/#SolutiiITPersonalizate" id="sketch" target="_blank">Soluții IT personalizate
+          <a href="#SolutiiITPersonalizate" id="sketch">Soluții IT personalizate
             <span></span>
           </a>
-          <a href="https://topsys.ro/#DeCeNoi" id="figma" target="_blank">De ce noi?
+          <a href="#DeCeNoi" id="figma">De ce noi?
             <span></span>
           </a>
-          <a href="https://topsys.ro/#CuTopsysEsteMaiUsor" id="inVision" target="_blank">Cu Topsys este mai ușor
+          <a href="#CuTopsysEsteMaiUsor" id="inVision">Cu Topsys este mai ușor
             <span></span>
           </a>
         </div>
